# twister

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DATABASE_SETUP.md  DEEPRESEARCH.md  GEMINI.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REPORT_PHASE1.md  NEURAL_WAVESHAPER_IMPLEMENTATION.md  NIGHTLY_API_NOTES.md  PHASE2_CHECKLIST.md  PHASE2_COMPLETION_REPORT.md  PHASE3-COMPLETION-REPORT.md  PHASE3-SUMMARY.txt  README.md  ROADMAP.md  ROADMAP_ADDENDUM.md  ROADMAP_ADDENDUM_modulation.md  ROADMAP_ADDENDUM_physics_haptics.md  SESSION-SUMMARY.md  SETUP_DATABASES.md  START_DATABASES.bat  SYNESTHESIA_MASTERPLAN.md  TASK-A-SUMMARY.md  TRACK_0D_AGENT_PROMPT.md  WIRING_PATTERN.md  app_output.txt  branches.txt  build.rs  build_error.txt  build_error_final.txt  build_errors_2.txt  build_errors_3.txt  build_errors_4.txt  build_log.txt  check2.txt  check4.txt  (+231 more)
.cargo/: config.toml
.gemini/: settings.json
.gemini/hooks/: hookify.hardware-expert.local.md  hookify.no-dead-code.local.md  hookify.signal-expert.local.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot.yml  (+2 more)
.qwen/: QWEN_AGENTS_SKILLS_SUMMARY.md
agents/: cipher-data-engineer-agent.md  crystal-ball-reconstructor-agent.md  oz-render-architect-agent.md  siren-extreme-dsp-agent.md  slint-ui-1-15-agent.md  supervisor-reviewer-agent.md  synesthesia-holographic-ui-agent.md  toto-hardware-hal-agent.md  train-state-space-ml-agent.md
assets/: SKILL-SLINT-MD3.md
benches/: bss_benchmark.rs  mamba_benchmark.rs  signal_ingestion.rs
cli/: Cargo.toml
common/: Cargo.toml
conductor/: ADDENDUM-AA.md  ADDENDUM-BB-JOYCON.md  ADDENDUM-BB.md  ADDENDUM-CC.md  ADDENDUM-DD.md  ADDENDUM-E.md  ADDENDUM-EE.md  ADDENDUM-FF.md  ADDENDUMS-B-C-D.md  AETHER-IMPLEMENTATION-NAMING.md  FINAL-SEND-SUMMARY.md  PARALLEL-ARCHITECTURE-GUIDE.md  REVISED-TASK-STRUCTURE.md  STUB-TO-IMPLEMENTATION-CASCADE.md  TRACK-C-INTERFACE-INTEGRATION.md  TRACK-FF-POINT-CLOUD-MATERIAL-FORMAT.md  aether-philosophical-foundation.md  haptic-engine-blueprint.md  index.md  parallel-development-plan.md  product-guidelines.md  product.md  tech-stack.md  track-a-device-orchestration.md  track-b-signal-ingestion.md  track-c-audio-processing-spectral-analysis.md  track-c-forensic-analysis.md  track-d-spatial-localization.md  track-e-agentic-ui.md  track-f-mamba-material-synthesis.md  track-g-dorothy-agent.md  track-i-pose-estimation-materials-REFINED.md  track-i-pose-estimation-materials.md  track-j-wav2vec2-integration.md  track-k-timegnn-training.md  track-particle-system-infrastructure.md  track-vi-1-chaos-physics.md  track-vi-1-resonance-physics.md  track-vi-2-niagara-particles.md  track-vi-3-megalights-rendering.md  (+4 more)
docs/: GPU_OPTIMIZATION_DOCTRINE.md  PHASE-2C-B1-IMPLEMENTATION.md  PHASE3-POINT-MAMBA-IMPLEMENTATION.md  PHASE3-QUICK-REFERENCE.md  POINT_MAMBA_GPU_SPRINT.md  Phase-2C-C.2-Code-Review.md  Phase-2C-C.2-Implementation-Summary.md  Phase2-DispatchKernel-Implementation.md  SESSION-2026-03-08-SUMMARY.md  SLINT_UI_INTEGRATION.md  Task-D.2-ANALYSIS-Tab-Implementation.md  task-a-progress.md
examples/: ag_widget_joycon.rs  ag_widget_pluto.rs  ag_widget_rtlsdr.rs  alignment_comparison.rs  applet_ps5_deck.rs  applet_toto_core.rs  applet_toto_hud.rs  auto_waveshaping.rs  chaos_physics_proving_ground.rs  chronos_slate.rs  field_physics_bench.rs  full_signal_ingestion_demo.rs  gaussian_splat_bench.rs  hardware.rs  joycon_wand.rs  lumen_demo.rs  mamba_brain.rs  megalights_proving_ground.rs  mesh_shader_demo.rs  particle_system_demo.rs  run_pose_estimation.rs  spectral_ingester.rs  test_dma_ingestion.rs  test_iq_dispatch_loop.rs  test_radio_device_open.rs  test_slint_device_controls.rs  test_stft_pipeline.rs  test_track_a.rs  test_vbuffer_context_window.rs  test_wav2vec2_pipeline.rs  test_wgpu.rs  toto.rs  waveshaper_widget.rs  waveshaping_mamba_widget.rs  waveshaping_mamba_widget.slint  wfm_radio.rs
models/: AGENTS.md  README.md
playwright-report/: index.html
shaders/: chronos_gizmo.wgsl  chronos_grid.wgsl  chronos_mesh_particles.wgsl  dispatch_kernel.wgsl  gaussian_splatting.wgsl
src/: App.tsx  Header.tsx  ResizeOverlay.tsx  TRAINING_TEST_GUIDE.md  af32.rs  analysis_mock_data.rs  anc.rs  anc_calibration.rs  anc_recording.rs  app.slint  async_event_handler.rs  audio.rs  bispectrum.rs  burn_test.rs  detection.rs  dispatch.rs  dispatch_kernel.rs  docker-compose.yml  embeddings.rs  evidence_export.rs  forensic.rs  forensic_queries.rs  fusion.rs  gpu.rs  gpu_device.rs  gpu_memory.rs  gpu_shared.rs  graph.rs  harmony.rs  index.html  lib.rs  main.rs  main.tsx  main_old.rs  mamba.rs  mod.rs  parameters.rs  parametric.rs  pdm.rs  qdrant_config.yaml  (+19 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/commands/: controllers.rs  devices.rs  gpio.rs  mod.rs  settings.rs
test-results/: .last-run.json
tests/: AGENTS.md  analysis_ui_integration.rs  chaos_physics.rs  check_gpu_memory_module.rs  checkpoint_persistence.rs  chord_dominance.rs  dispatch_kernel_integration.rs  evidence_export_test.rs  features_audio.rs  forensic_log_enhancement_test.rs  forensic_queries_test.rs  gpu_memory_standalone.rs  mamba_control_capture.rs  megalights_rendering.rs  memo_integration.rs  mesh_shaders_integration.rs  ml_integration.rs  niagara_particles.rs  pdm_spike_rejection.rs  phase3_async_event_handler.rs  phase_3d_blelloch_scan.rs  phase_3e_trainer_integration.rs  point_mamba_integration.rs  pose_integration_tests.rs  ray_tracer_integration.rs  resonance_integration.rs  rt_attack_viz_integration.rs  sparse_pdm_forensics.rs  spatial_filter_integration.rs  tdoa_elevation.rs  timegnn_integration.rs  timegnn_pattern_discovery.rs  timegnn_training.rs  unified_memory_integration.rs  wav2vec2_integration.rs
tools/: convert_mediapipe.rs
twister_rtc/: Cargo.toml
ui/: AGENTS.md  app.slint  controls_panel.slint  copilot_panel.slint  hardware.slint  joycon_panel.slint  materials_editor.slint  standards.slint  tokens.slint  toto.slint  waveshaper_metrics.slint  waveshaper_widget.slint
weights/: README.md
(+458 files in other folders)
