[package]
name = "twister"
version = "0.5.0"
edition = "2024"
default-run = "twister"

[[bin]]
name = "convert_mediapipe"
path = "tools/convert_mediapipe.rs"

[[example]]
name = "run_pose_estimation"
path = "examples/run_pose_estimation.rs"

# Track B Examples
[[example]]
name = "test_iq_dispatch_loop"
path = "examples/test_iq_dispatch_loop.rs"

[[example]]
name = "test_stft_pipeline"
path = "examples/test_stft_pipeline.rs"

[[example]]
name = "test_vbuffer_context_window"
path = "examples/test_vbuffer_context_window.rs"

[[example]]
name = "full_signal_ingestion_demo"
path = "examples/full_signal_ingestion_demo.rs"

# Benchmarks
[[bench]]
harness = false
name = "signal_ingestion"
path = "benches/signal_ingestion.rs"

[dependencies]
# ── Error handling ─────────────────────────────────────────────────────────────
anyhow = "*"
async-trait = "*"
# ── ML: Burn framework (GPU-accelerated neural networks via wgpu/Vulkan) ────────
burn = { version = "0.21.0-pre.2", features = ["ndarray", "std", "wgpu"] }
burn-import = "0.21.0-pre.1"
burn-ndarray = { version = "0.21.0-pre.2", features = ["std"] }
burn-wgpu = "0.21.0-pre.2"
bytemuck = { version = "*", features = ["derive"] }
# ── ML: Candle (CPU tensor engine — Mamba SSM autoencoder) ────────────────────
candle-core = "*"
candle-nn = "*"
# ── Forensic evidence export ───────────────────────────────────────────────────
chrono = { version = "*", features = ["serde"] }
# ── Audio ──────────────────────────────────────────────────────────────────────
cpal = "*"
# ── Benchmarking ───────────────────────────────────────────────────────────────
criterion = { version = "*", features = ["html_reports"] }
# ── Concurrency ────────────────────────────────────────────────────────────────
crossbeam-channel = "*"
csv = "*"
# ── Gamepad Input (Joy-Con gesture control) ────────────────────────────────────
gilrs = "*"
half = "*"
hdf5 = { version = "*", optional = true }
# ── HuggingFace Model Hub + Corpus Storage ──────────────────────────────────────
hf-hub = "*"
image = "*"
# ── Logging ────────────────────────────────────────────────────────────────────
log = "*"
# ── Forensic databases ─────────────────────────────────────────────────────────
neo4rs = "*"
# ── Numerics / DSP ─────────────────────────────────────────────────────────────
num-complex = "*"
parking_lot = "*"
pollster = "*"
qdrant-client = "*"
rand = "*"
rustfft = "*"
safetensors = "*"
# ── Serialisation ──────────────────────────────────────────────────────────────
serde = { version = "*", features = ["derive"] }
serde_json = "*"
# ── UI ─────────────────────────────────────────────────────────────────────────
slint = { version = "1.15.1", default-features = false, features = [
  "backend-winit",  # Required windowing backend
  "compat-1-2",  # Forward compatibility with future versions
  "renderer-femtovg-wgpu",  # Enables FemtoVG via WGPU (supports Vulkan)
  "unstable-wgpu-28",  # Specifically enables WGPU v28 features
] }
tempfile = "*"
tokio = { version = "*", features = ["full"] }
# ── GPU compute ────────────────────────────────────────────────────────────────
# DX12 backend — Windows 11. AMD RX 6700 XT is accessed via the D3D12 layer.
# wgpu on Windows uses DX12 natively; Vulkan is available as a fallback.
wgpu = { version = "28.0.0", features = ["vulkan"] }
# Note: HDF5 requires native library installation (libhdf5).
# Using JSON fallback by default if hdf5 feature is disabled.

[build-dependencies]
slint-build = "1.15.1"

[features]
# Build with RTL-SDR hardware support enabled by default.
# Gracefully detects if device is not plugged in (device_not_found error).
# To disable: cargo build --no-default-features
default = ["rtlsdr"]
all-rf = ["pluto-plus", "rtlsdr"]
pluto-plus = []
rtlsdr = []

[profile.dev]
# Keep DSP hot paths fast even in debug builds.
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
