[package]
name = "twister"
version = "0.5.0"
edition = "2024"



[[bin]]
name = "convert_mediapipe"
path = "tools/convert_mediapipe.rs"

[[example]]
name = "run_pose_estimation"
path = "examples/run_pose_estimation.rs"

[dependencies]
joycon-rs = "*"
nalgebra = "*"
half = "*"
# ── Error handling ─────────────────────────────────────────────────────────────
anyhow = "*"
bytemuck = { version = "*", features = ["derive"] }
# ── ML: Burn framework (GPU-accelerated neural networks via wgpu/Vulkan) ────────
burn = { version = "0.21.0-pre.2", features = ["std", "wgpu", "ndarray"] }
burn-wgpu = "0.21.0-pre.2"
burn-ndarray = { version = "0.21.0-pre.2", features = ["std"] }
burn-import = "0.21.0-pre.1"
image = "*"
# ── ML: Candle (CPU tensor engine — Mamba SSM autoencoder) ────────────────────
candle-core = "*"
candle-nn = "*"
# ── Forensic evidence export ───────────────────────────────────────────────────
chrono = { version = "*", features = ["serde"] }
# ── Audio ──────────────────────────────────────────────────────────────────────
cpal = "*"
# ── Concurrency ────────────────────────────────────────────────────────────────
crossbeam-channel = "*"
csv = "*"
# ── Forensic databases ─────────────────────────────────────────────────────────
neo4rs = "*"
# ── Numerics / DSP ─────────────────────────────────────────────────────────────
num-complex = "*"
parking_lot = "*"
pollster = "*"
qdrant-client = "*"
rustfft = "*"
# ── Serialisation ──────────────────────────────────────────────────────────────
serde = { version = "*", features = ["derive"] }
serde_json = "*"
# ── UI ─────────────────────────────────────────────────────────────────────────
slint = { version ="1.15.1", default-features = false, features = [
    "backend-winit",           # Required windowing backend
    "renderer-femtovg-wgpu",    # Enables FemtoVG via WGPU (supports Vulkan)
    "unstable-wgpu-28",         # Specifically enables WGPU v28 features
    "compat-1-2"                # Forward compatibility with future versions
] }
tempfile = "*"
async-trait = "*"
# ── GPU compute ────────────────────────────────────────────────────────────────
# DX12 backend — Windows 11. AMD RX 6700 XT is accessed via the D3D12 layer.
# wgpu on Windows uses DX12 natively; Vulkan is available as a fallback.
wgpu = { version = "*", features = ["vulkan"] }
# ── HuggingFace Model Hub + Corpus Storage ──────────────────────────────────────
hf-hub = "*"
safetensors = "*"
tokio = { version = "*", features = ["full"] }
rand = "*"
hdf5 = "*"
dualsense-rs = "0.6.0"
raw-window-handle = "0.6"
hidapi = "2.6.5"
# Note: HDF5 requires native library installation (libhdf5); using JSON for MVP

[build-dependencies]
slint-build = "*"

[features]
# Build with RTL-SDR hardware support enabled by default.
# Gracefully detects if device is not plugged in (device_not_found error).
# To disable: cargo build --no-default-features
default = ["rtlsdr"]
rtlsdr = []
pluto-plus = []
all-rf = ["rtlsdr", "pluto-plus"]

[profile.dev]
# Keep DSP hot paths fast even in debug builds.
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[target."cfg(windows)".dependencies]
windows = { version = "0.58.0", features = ["Win32_Graphics_Dwm", "Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }
