[package]
name = "twister"
version = "0.5.0"
edition = "2024"

[[bin]]
name = "convert_mediapipe"
path = "tools/convert_mediapipe.rs"

[[example]]
name = "run_pose_estimation"
path = "examples/run_pose_estimation.rs"

[[example]]
name = "applet_toto_core"
path = "examples/applet_toto_core.rs"

[[example]]
name = "toto"
path = "examples/toto.rs"
required-features = ["rtlsdr"]

[dependencies]
# ── Error handling ─────────────────────────────────────────────────────────────
anyhow = "*"
async-trait = "*"
# ── ML: Burn framework (GPU-accelerated neural networks via wgpu/Vulkan) ────────
burn = { version = "0.21.0-pre.2", features = [
  "autodiff",
  "ndarray",
  "std",
  "wgpu"
] }
burn-import = "0.21.0-pre.1"
burn-ndarray = { version = "0.21.0-pre.2", features = ["std"] }
burn-wgpu = "0.21.0-pre.2"
bytemuck = { version = "*", features = ["derive"] }
# ── ML: Candle (CPU tensor engine — Mamba SSM autoencoder) ────────────────────
candle-core = "*"
candle-nn = "*"
# ── Forensic evidence export ───────────────────────────────────────────────────
chrono = { version = "*", features = ["serde"] }
# ── Audio ──────────────────────────────────────────────────────────────────────
cpal = "*"
# ── Concurrency ────────────────────────────────────────────────────────────────
crossbeam-channel = "*"
csv = "*"
half = "*"
hdf5 = { version = "*", optional = true }
# ── HuggingFace Model Hub + Corpus Storage ──────────────────────────────────────
hf-hub = "*"
hidapi = "*"
image = "*"
joycon-rs = "*"
nalgebra = "*"
# ── Forensic databases ─────────────────────────────────────────────────────────
neo4rs = "*"
ndarray = "*"
noise = { version = "*", features = ["std"] }
# ── Numerics / DSP ─────────────────────────────────────────────────────────────
num-complex = "*"
log = "*"
parking_lot = "*"
pollster = "*"
qdrant-client = "*"
rand = { version = "*", features = ["std", "std_rng"] }
# dualsense-rs = "*"
raw-window-handle = "*"
rustfft = "*"
safetensors = "*"
rtlsdr = { version = "*", optional = true }
# ── Serialisation ──────────────────────────────────────────────────────────────
serde = { version = "*", features = ["derive"] }
serde_json = "*"
# ── UI ─────────────────────────────────────────────────────────────────────────
slint = { version = "1.15.1", default-features = false, features = [
  "backend-winit",  # Required windowing backend
  "compat-1-2",  # Forward compatibility with future versions
  "renderer-femtovg-wgpu",  # Enables FemtoVG via WGPU (supports Vulkan)
  "unstable-wgpu-28",  # Specifically enables WGPU v28 features
] }
tempfile = "*"
thiserror = "*"
tokio = { version = "*", features = ["full"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
tray-icon = "*"
uuid = { version = "*", features = ["v4"] }
# ── GPU compute ────────────────────────────────────────────────────────────────
# DX12 backend — Windows 11. AMD RX 6700 XT is accessed via the D3D12 layer.
# wgpu on Windows uses DX12 natively; Vulkan is available as a fallback.
wgpu = { version = "*", features = ["vulkan"] }
windows-sys = { version = "*", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm"
], optional = true }
# Note: HDF5 requires native library installation (libhdf5); using JSON for MVP

[build-dependencies]
slint-build = "*"

[target."cfg(windows)".dependencies]
windows = { version = "*", features = [
  "Win32_Foundation",
  "Win32_Graphics_Dwm",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging"
] }

[features]
# Build with RTL-SDR hardware support enabled by default.
# Gracefully detects if device is not plugged in (device_not_found error).
# To disable: cargo build --no-default-features
default = ["rtlsdr"]
all-rf = ["pluto-plus", "rtlsdr"]
hdf5 = ["dep:hdf5"]
pluto-plus = []
rtlsdr = ["dep:rtlsdr"]

[profile.dev]
# Keep DSP hot paths fast even in debug builds.
opt-level = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
