[package]
name = "synesthesia"
version = "0.1.0"
edition = "2024"
description = "A Tauri App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "synesthesia_lib"

[dependencies]
bytemuck = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
tauri = { version = "*", features = [] }
tauri-plugin-opener = "*"

[build-dependencies]
tauri-build = { version = "*", features = [] }
